--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "https://witchof0x20.github.io/blog"
+base_url = "https://witchof0x20.github.io"
 
 # Site metadata, used for feeds
 title = "Jade's Blog"
